fix(next): remove extra margin on mobile

--- a/packages/next/src/app/page.module.scss
+++ b/packages/next/src/app/page.module.scss
@@ -34,6 +34,7 @@
     background-color: transparent;
     justify-content: center;
     padding: 0;
+    margin: 0;
 
     .title {
       color: rgb(var(--on-background-color));
